# Fisherman

./: .env  .gitignore
backend/: Dockerfile.backend
backend/fisherman/: .env  .env.example  .pre-commit-config.yml  Dockerfile  Dockerfile.aws.lambda  pyproject.toml  template.yml
backend/fisherman/app/: backend_pre_dev.py  dev.sh  enums.py  handler.py  main.py  quick_run.py
backend/fisherman/app/core/: config.py
backend/fisherman/app/core/settings/: app.py  base.py  enums.py
backend/fisherman/app/crud/: __init__.py  base.py  crud_user.py
backend/fisherman/app/db/: base_class.py  init_db.py  session.py
backend/fisherman/app/db/migrations/: env.py
backend/fisherman/app/db/migrations/versions/: 0a0075e6fde1_add_token_table.py  7fce9bf5b9b0_added_initial_tables.py
backend/fisherman/app/models/: user.py
backend/fisherman/app/schemas/: message.py  user.py
backend/infra/: app.py
backend/infra/infra/: infra_stack.py
