[tool.poetry]
name = "fisherman"
version = "0.1.0"
description = ""
authors = ["Bao Tran <tranthanhbao2207@gmail.com>"]

[tool.poetry.scripts]
start = "uvicorn --factory app.main:create_app --host 0.0.0.0 --port 5000 --reload"


[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
tenacity = "^8.0.1"
loguru = "^0.6.0"
pydantic = { version = "^1.8", extras = ["email", "dotenv"] }
passlib = "^1.7.4"
bcrypt = "^3.2.2"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10"
autoflake = "^1.4"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
